# intraday-trading

./: README.md  pyproject.toml  requirements.txt  test_optimization_fix.py
config/: settings.py
examples/: workflow.ipynb  workflow.py
src/backtesting/: backtest_engine.py  walk_forward.py
src/data/: data_loader.py  preprocessing.py
src/indicators/: breakout_probability.py  custom.py  statistical.py  technical.py
src/regime_detection/: hmm.py  trend_detector.py  volatility_regime.py
src/risk_management/: dynamic_sizing.py  risk_metrics.py
src/strategy/: base_strategy.py  component_optimizer.py  ml_filter.py  optimization_metrics.py  parameter_optimizer.py  range_trading_strategy.py  signal_generator.py
utils/: logger.py
